objects/CSS_Make_Model__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccessCode__c</fullName>
        <description>To store Access Code</description>
        <label>AccessCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineFamily__c</fullName>
        <description>To store Engine Family</description>
        <label>EngineFamily</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentId__c</fullName>
        <description>To store equipment Id</description>
        <label>EquipmentId</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CSS Make Model</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AccessCode__c</columns>
        <columns>EngineFamily__c</columns>
        <columns>EquipmentId__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>